data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3764.wast
;; 3. **Test Description**: Include several valid function calls before a `br_table` with a high index, but ensure one `call` function is missing an expected parameter. This mismatch should generate different function signature errors in WebAssembly and wizard_engine, affecting the subsequent `br_table` behavior.    - **Reasoning**: Tests the robustness of type-checking before `br_table` execution and how it propagates to a differential behavior.

(assert_invalid
  (module
    (func $f1 (param i32) (result i32)
      (i32.const 0)
    )
    (func $f2 (param i32) (result i32)
      (call $f1 (i32.const 1))
      (call $f3 (i32.const 1))
    )
    (func $f3 (param i32 i32) (result i32)
      (i32.const 1)
    )
    (func $f4
      (i32.const 0)
      (br_table 1)
    )
    (table funcref (elem $f1 $f2 $f3 $f4))
  )
  "type mismatch"
)